<resources>
    <string name="app_name">YU Market For Owners</string>
    <string name="item_manage">상품 관리</string>
    <string name="order_list">주문 목록</string>
    <string name="review_manage">리뷰 관리</string>
    <string name="chatting_manage">채팅 관리</string>
    <string name="market_manage">마켓 관리</string>
    <string name="edit_item">상품 수정</string>
    <string name="item_stock">재고 수량</string>
    <string name="order_id">주문번호</string>
    <string name="delivery_type">이용방법</string>
    <string name="order_time">주문일시</string>
    <string name="order_telephone">주문자</string>
    <string name="accept_order">주문 접수</string>
    <string name="reject_order">거절</string>
    <string name="delivery_done">상품전달 완료</string>
    <string name="order_item_image_description">주문한 상품의 이미지</string>
    <string name="price_format">₩<b>%1$,d</b></string>
    <string name="item_edit_button_description">상품 수정 버튼</string>
    <string name="review_customer_profile_image_description">소비자 프로필 이미지</string>
    <string name="long_review_example">review content review content review content review content review content review content review content</string>
    <string name="reply">답글</string>
    <string name="order_item">구매 상품</string>
    <string name="long_item_name_example">long order item long order item long order item long order item</string>
    <string name="chat_room_opponent_profile_image_description">채팅방의 상대방 사진</string>
    <string name="chat_room_remove_button_description">채팅방 삭제 버튼</string>
    <string name="edit_market">마켓 정보 수정</string>
    <string name="manage_schedule">일정 관리</string>
    <string name="manage_review">리뷰 관리</string>
    <string name="market_manage_name_format"><b>%1$s</b> %2$s 사장님</string>
    <string name="notice">공지사항</string>
    <string name="notice_icon_description">공지 사항 아이콘</string>
    <string name="service_center">고객센터</string>
    <string name="setting">환경설정</string>
</resources>