<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="orderModel"
            type="com.example.yumarketforowners.data.model.orderlist.OrderModel" />

        <variable
            name="adapter"
            type="com.example.yumarketforowners.adapter.ModelRecyclerAdapter" />

        <variable
            name="listener"
            type="com.example.yumarketforowners.adapter.listener.orderlist.OrderViewHolderListener" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp">


            <LinearLayout
                android:id="@+id/orderTitleSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/order_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/delivery_type" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/order_time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/order_telephone" />

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                app:layout_constraintLeft_toRightOf="@id/orderTitleSet"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@{orderModel.orderId}"
                    tools:text="order id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@{orderModel.deliveryType.string}"
                    tools:text="매장 이용" />

                <!-- todo 2022.06.08 need a binding adapter for order time -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@{Long.toString(orderModel.orderTime)}"
                    tools:text="11/27 (토요일) 19:30 주문" />

                <!-- todo 2022.06.09 set on click -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:onClick="@{() -> listener.onTelePhoneNumberClicked(orderModel.telePhoneNumber)}"
                    android:text="@{orderModel.telePhoneNumber}"
                    android:textColor="@color/telephone_string_color"
                    tools:text="010-1111-2222" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/orderRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@color/request_text_background"
                android:padding="5dp"
                android:text="@{`[요청사항] ` + orderModel.request}"
                android:textColor="@color/request_text_color"
                app:layout_constraintTop_toBottomOf="@id/orderTitleSet"
                tools:text="[요청사항] 15분 후에 방문하겠습니다." />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderItemRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adapter="@{adapter}"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/orderRequest" />

            <!-- todo 2022.06.09 set on click -->
            <Button
                android:id="@+id/orderAcceptButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/accept_button_background"
                android:onClick="@{() -> listener.onAcceptOrderButtonClicked(orderModel)}"
                android:text="@string/accept_order"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/orderRejectButton"
                app:layout_constraintTop_toBottomOf="@id/orderItemRecyclerView"
                app:showIfPending="@{orderModel.orderState}" />

            <!-- todo 2022.06.09 set on click -->
            <Button
                android:id="@+id/orderRejectButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> listener.onRejectOrderButtonClicked(orderModel)}"
                android:text="@string/reject_order"
                android:textColor="@color/reject_text_color"
                app:layout_constraintLeft_toRightOf="@id/orderAcceptButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderItemRecyclerView"
                app:showIfPending="@{orderModel.orderState}" />

            <!-- todo 2022.06.09 set on click -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/accept_button_background"
                android:onClick="@{() -> listener.onDeliveryDoneButtonClicked(orderModel)}"
                android:text="@string/delivery_done"
                app:layout_constraintTop_toBottomOf="@id/orderItemRecyclerView"
                app:showIfAccepted="@{orderModel.orderState}"
                tools:visibility="invisible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>