<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="reviewModel"
            type="com.example.yumarketforowners.data.model.reviewmanage.ReviewModel" />

        <variable
            name="listener"
            type="com.example.yumarketforowners.adapter.listener.reviewmanage.ReviewViewHolderListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/reviewWriterProfileImage"
            cornerRadius="@{25f}"
            imageUrl="@{reviewModel.profileImageUrl}"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/review_customer_profile_image_description"
            tools:src="@drawable/review_manage_icon" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/reviewWriterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{reviewModel.writer}"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="user name" />

            <TextView
                android:id="@+id/reviewContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@{reviewModel.content}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviewWriterName"
                tools:text="@string/long_review_example" />

            <!-- todo 2022.06.09 need a binding adapter for write time -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Long.toString(reviewModel.writeTime)}"
                android:textSize="12sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="30분 전" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/idle_color"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/reviewContent">

                <TextView
                    android:id="@+id/reviewOrderItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/order_item"
                    android:textColor="@color/unfocused_color"
                    android:textSize="11sp"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <View
                    android:id="@+id/reviewTextDividerBar"
                    android:layout_width="2dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/gray_d9"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/reviewOrderItemText"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{reviewModel.order.orderItems[0].name}"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/reviewTextDividerBar"
                    app:layout_constraintRight_toLeftOf="@id/replyText"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/long_item_name_example" />

                <TextView
                    android:id="@+id/replyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> listener.onReplyClicked(reviewModel)}"
                    android:text="@string/reply"
                    android:textColor="@color/interactive_color"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>